--- a/iOS/Onetrack/Base.lproj/Main.storyboard
+++ b/iOS/Onetrack/Base.lproj/Main.storyboard
@@ -104,6 +104,7 @@
                     <connections>
                         <outlet property="backButtonImage" destination="beI-Up-XiY" id="kZ7-ZK-a2o"/>
                         <outlet property="buttonView" destination="crs-iN-avL" id="VnP-Ud-vqw"/>
+                        <outlet property="instructionScrollView" destination="4Mj-87-Hwa" id="PPE-pI-4Sc"/>
                         <outlet property="messageLabel" destination="dBs-Yj-Odr" id="Vvq-2S-KXd"/>
                     </connections>
                 </viewController>
@@ -126,7 +127,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XF5-XU-i6c" id="QZA-re-ia4">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view tag="20" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jza-az-TKX">
@@ -215,10 +216,10 @@
                                 <rect key="frame" x="0.0" y="182" width="600" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Usk-ep-mWR" id="oAc-LM-Zxh">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="+" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRt-yq-Lhh">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRt-yq-Lhh">
                                             <rect key="frame" x="276.5" y="-1" width="47" height="93"/>
                                             <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="80"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -246,6 +247,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="KlH-dK-Smf">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="PKg-68-hjz" eventType="valueChanged" id="xUb-j4-lw5"/>
+                        </connections>
+                    </refreshControl>
                     <connections>
                         <outlet property="editButton" destination="kFp-Ff-JNY" id="VSJ-mA-qib"/>
                         <segue destination="Fol-1C-u9s" kind="presentation" identifier="LoginSegue" id="usr-UJ-I0Q"/>
@@ -485,7 +492,7 @@
                                         <rect key="frame" x="0.0" y="92" width="560" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jDD-nq-Kqf" id="u0g-LN-jpU">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AEK-gL-wks">
@@ -655,6 +662,6 @@
         <image name="edit" width="22" height="6"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="jUq-ug-5Gr"/>
+        <segue reference="usr-UJ-I0Q"/>
     </inferredMetricsTieBreakers>
 </document>
